<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SeaApp</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_cart">Cart</string>
    <string name="title_akun">Akun</string>
    <string name="title_activity_penjual">PenjualActivity</string>
    <string name="tab_text_1">Product</string>
    <string name="tab_text_2">Pesanan</string>
    <string name="welcome">Selamat datang seapp mania, untuk menggunakan aplikasi login dulu ya ...</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="sign_in">Sign In</string>

    <string name="reg_header_cart_women">Easy Shopping</string>
    <string name="reg_header_delivery_man">Easy Shipping</string>
    <string name="reg_header_fish_monger">Easy Selling</string>
    <string name="reg_text_cart_women">Feel your awesome experience\nwhile shopping by\nyour phone</string>
    <string name="reg_text_delivery_man">Your order will be immediately\ncollected and sent by our\ncourier</string>
    <string name="reg_text_fish_monger"> </string>

</resources>